<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_sim</name>
  <version>1.0.0</version>
  <description>Kinematic simulator for the Panda Robot</description>
  <maintainer email="marco.costanzo@unicampania.it">Marco Costanzo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf_launch</depend>
  <depend>moveit_resources_panda_description</depend>
  <depend>moveit_resources_panda_moveit_config</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
